[project]
name = "torchonn-pyutils"
version = "0.0.2"
description = "A set of python modules for machine learning and data mining"
readme = "README.md"
maintainers = [
    {name = "scikit-learn developers", email="scikit-learn@python.org"},
]
dependencies = [
  "numpy>=1.19.2",
  "torchvision>=0.9.0.dev20210130",
  "tqdm>=4.56.0",
  "setuptools>=52.0.0",
  "torch>=1.8.0",
  "matplotlib>=3.3.4",
  "svglib>=1.1.0",
  "scipy>=1.5.4",
  "scikit-learn>=0.24.1",
  "torchsummary>=1.5.1",
  "pyyaml>=5.1.1",
  "tensorflow>=2.5.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers=[
  "Development Status :: 3 - Alpha",
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Topic :: Software Development",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
source = "https://github.com/JeremieMelo/pyutility"

[build-system]
requires = ["setuptools >= 52.0.0"]
build-backend = ["setuptools.build"]

